--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,13 +1,26 @@
-<header>
-  <nav>
-    <a href="/">Home</a>
-    <a href="/about">About Us</a>
-    <a href="/location">Location & Hours</a>
-    <a href="/contact">Contact Us</a>
-    <a href="/vip">VIP / Rewards</a>
-    <a href="/giftcards">Gift Cards</a>
-    <a href="/catering">Catering</a>
-    <a href="/reservations">Reservations</a>
-    <a href="/order" class="btn">Order Online</a>
-  </nav>
+<header class="main-header">
+    <nav class="navbar">
+        <div class="nav-container">
+            <a href="/" class="nav-logo">
+                <i class="fas fa-utensils"></i>
+                LaunchWeb Gourmet
+            </a>
+            <ul class="nav-menu">
+                <li><a href="/" class="nav-link">Home</a></li>
+                <li><a href="/about" class="nav-link">About</a></li>
+                <li><a href="/order" class="nav-link order-btn">Order Online</a></li>
+                <li><a href="/location" class="nav-link">Location</a></li>
+                <li><a href="/reservations" class="nav-link">Reservations</a></li>
+                <li><a href="/catering" class="nav-link">Catering</a></li>
+                <li><a href="/vip" class="nav-link">VIP Club</a></li>
+                <li><a href="/giftcards" class="nav-link">Gift Cards</a></li>
+                <li><a href="/contact" class="nav-link">Contact</a></li>
+            </ul>
+            <div class="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+        </div>
+    </nav>
 </header>
