Fixed testimonial buttons

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -151,7 +151,7 @@
             for special occasions."
           </p>
           <div class="testimonial-author">
-            <strong>Sarah Johnson</strong>
+            <strong>Example Customer 1</strong>
             <span>Food Blogger</span>
           </div>
         </div>
@@ -170,7 +170,7 @@
             outstanding."
           </p>
           <div class="testimonial-author">
-            <strong>Michael Chen</strong>
+            <strong>Example Customer 2</strong>
             <span>Restaurant Critic</span>
           </div>
         </div>
@@ -188,7 +188,7 @@
             to detail in every aspect, from presentation to flavor, is remarkable."
           </p>
           <div class="testimonial-author">
-            <strong>Emily Rodriguez</strong>
+            <strong>Example Customer 3</strong>
             <span>Local Resident</span>
           </div>
         </div>
