--- a/views/index.ejs
+++ b/views/index.ejs
@@ -151,7 +151,7 @@
             for special occasions."
           </p>
           <div class="testimonial-author">
-            <strong>Example Customer 1</strong>
+            <strong>Sarah Johnson</strong>
             <span>Food Blogger</span>
           </div>
         </div>
@@ -170,7 +170,7 @@
             outstanding."
           </p>
           <div class="testimonial-author">
-            <strong>Example Customer 2</strong>
+            <strong>Michael Chen</strong>
             <span>Restaurant Critic</span>
           </div>
         </div>
@@ -188,7 +188,7 @@
             to detail in every aspect, from presentation to flavor, is remarkable."
           </p>
           <div class="testimonial-author">
-            <strong>Example Customer 3</strong>
+            <strong>Emily Rodriguez</strong>
             <span>Local Resident</span>
           </div>
         </div>
@@ -241,7 +241,7 @@
     </form>
   </section>
 
-
+  <%- include('partials/footer') %>
   <script src="/js/script.js"></script>
 </body>
 </html>
